# NovaTerm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/nova-config/: Cargo.toml
crates/nova-config/src/: detect.rs  lib.rs  theme.rs
crates/nova-core/: Cargo.toml
crates/nova-core/src/: keymap.rs  lib.rs
crates/nova-protocol/: Cargo.toml
crates/nova-protocol/src/: cell.rs  color.rs  command.rs  event.rs  frame.rs  ids.rs  input.rs  lib.rs
crates/nova-protocol/tests/: roundtrip.rs
crates/nova-pty/: Cargo.toml
crates/nova-pty/examples/: probe.rs
crates/nova-pty/src/: conpty.rs  error.rs  lib.rs
crates/nova-pty/tests/: spawn.rs
crates/nova-storage/: Cargo.toml
crates/nova-storage/src/: lib.rs  migrations.rs
crates/nova-tauri/: Cargo.toml  tauri.conf.json
crates/nova-tauri/capabilities/: default.json
crates/nova-tauri/src/: main.rs
crates/nova-terminal/: Cargo.toml
crates/nova-terminal/src/: grid.rs  lib.rs  palette.rs
crates/nova-terminal/tests/: parsing.rs
docs/: ARCHITECTURE.md  CONFIG.md  DATABASE.md  PLUGINS.md  RENDERING.md  ROADMAP.md  SECURITY.md  TESTING.md
novacore/: ARCHITECTURE.md  Cargo.toml
novacore/crates/nova-bus/: Cargo.toml
novacore/crates/nova-bus/src/: lib.rs
novacore/crates/nova-cmd/: Cargo.toml
novacore/crates/nova-cmd/src/: builtins.rs  command.rs  error.rs  eval.rs  lib.rs  registry.rs
novacore/crates/nova-engine/: Cargo.toml
novacore/crates/nova-engine/src/: lib.rs
novacore/crates/nova-gpu/: Cargo.toml
novacore/crates/nova-gpu/src/: lib.rs
novacore/crates/nova-history/: Cargo.toml
novacore/crates/nova-history/src/: lib.rs
novacore/crates/nova-lang/: Cargo.toml
novacore/crates/nova-lang/src/: ast.rs  lexer.rs  lib.rs  parser.rs
novacore/crates/nova-proc/: Cargo.toml
novacore/crates/nova-proc/src/: lib.rs
novacore/crates/nova-shell/: Cargo.toml
novacore/crates/nova-shell/src/: atlas.rs  frame.rs  gui.rs  main.rs
novacore/crates/nova-ui/: Cargo.toml
novacore/crates/nova-ui/src/: draw.rs  geometry.rs  layout.rs  lib.rs  node.rs  view.rs
novacore/crates/nova-value/: Cargo.toml
novacore/crates/nova-value/src/: custom.rs  lib.rs  record.rs  render.rs  table.rs
novacore/crates/nova-vfs/: Cargo.toml
novacore/crates/nova-vfs/src/: lib.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  bridge.ts  frames.ts  index.css  sinks.ts  store.ts  types.ts  xtermTheme.ts
ui/src/components/: CommandPalette.tsx  Settings.tsx  StatusBar.tsx  Tabs.tsx  TerminalView.tsx  TitleBar.tsx
ui/src/renderer/: TerminalRenderer.ts
