[workspace]
resolver = "2"
members = [
    "crates/nova-protocol",
    "crates/nova-pty",
    "crates/nova-terminal",
    "crates/nova-config",
    "crates/nova-storage",
    "crates/nova-core",
    "crates/nova-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["NovaTerm contributors"]
repository = "https://github.com/novaterm/novaterm"

[workspace.dependencies]
# Internal
nova-protocol = { path = "crates/nova-protocol" }
nova-pty = { path = "crates/nova-pty" }
nova-terminal = { path = "crates/nova-terminal" }
nova-config = { path = "crates/nova-config" }
nova-storage = { path = "crates/nova-storage" }
nova-core = { path = "crates/nova-core" }

# Async / runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Serde / data
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal
vte = "0.13"
base64 = "0.22"

# Error / logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time / ids
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting"] }

# Windows
windows = "0.58"
windows-sys = "0.59"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
