[package]
name = "nova-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JSON configuration and theme engine for NovaTerm."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
