[package]
name = "nova-pty"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native Windows ConPTY (pseudoconsole) wrapper for NovaTerm."

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
] }
