[package]
name = "nova-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite-backed storage: history, workspaces, sessions, snapshots."

[lints]
workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
