[package]
name = "nova-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NovaTerm desktop application (Tauri v2 shell)."
default-run = "nova-tauri"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nova-core = { workspace = true }
nova-config = { workspace = true }
nova-protocol = { workspace = true }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(windows)'.dependencies]
window-vibrancy = "0.5"
